CSD Fixed Text Color on Mobile for Sign Up 05112015 - updated font color for sign up dropdown on mobile broadcast page

--- a/public/css/broadcast/default/responsive.css
+++ b/public/css/broadcast/default/responsive.css
@@ -106,6 +106,9 @@
   .processq .dropdown-menu {
     width: 90%!important;
   }
+  .dropdown-menu>li>a {
+      color: #fff!important;
+  }
   #moreq .nav-tabs>li.active>a:focus, 
   #moreq .nav-tabs>li>a:hover, 
   #moreq .nav-tabs>li.active>a, 
